fixed margin spacing for paragraph on case studies page

--- a/public/output.css
+++ b/public/output.css
@@ -722,9 +722,6 @@ video {
 .h-screen {
   height: 100vh;
 }
-.max-h-screen {
-  max-height: 100vh;
-}
 .w-1\/12 {
   width: 8.333333%;
 }
@@ -739,9 +736,6 @@ video {
 }
 .w-12 {
   width: 3rem;
-}
-.w-2\/3 {
-  width: 66.666667%;
 }
 .w-2\/5 {
   width: 40%;
@@ -784,9 +778,6 @@ video {
 }
 .w-8 {
   width: 2rem;
-}
-.w-96 {
-  width: 24rem;
 }
 .w-auto {
   width: auto;
@@ -2278,21 +2269,6 @@ li {
   .lg\:col-span-1 {
     grid-column: span 1 / span 1;
   }
-  .lg\:col-start-1 {
-    grid-column-start: 1;
-  }
-  .lg\:col-start-2 {
-    grid-column-start: 2;
-  }
-  .lg\:row-auto {
-    grid-row: auto;
-  }
-  .lg\:row-start-1 {
-    grid-row-start: 1;
-  }
-  .lg\:row-start-2 {
-    grid-row-start: 2;
-  }
   .lg\:mx-6 {
     margin-left: 1.5rem;
     margin-right: 1.5rem;
@@ -2334,9 +2310,6 @@ li {
   }
   .lg\:mt-32 {
     margin-top: 8rem;
-  }
-  .lg\:mt-4 {
-    margin-top: 1rem;
   }
   .lg\:mt-44 {
     margin-top: 11rem;
@@ -2470,10 +2443,6 @@ li {
   .lg\:py-6 {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
-  }
-  .lg\:py-8 {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
   }
   .lg\:pl-12 {
     padding-left: 3rem;
